# sc1000-controller

./: .gitattributes  .gitignore  Makefile  README.md  build.sh  ship.sh
docs/: ARCHITECTURE.md  MIDI-MAPPING.md
firmware/: README.md  sc1000-midi-out.patch
firmware/overlay/software/: sc_midi_out.c  sc_midi_out.h
host/: README.md  midimon.swift  sc1000-controls.md  sc1000-scripts.js  sc1000.midi.xml
src/: ControlState.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  RenoiseLookAndFeel.h  ScratchEngine.h
vst/: .gitignore  CMakeLists.txt  README.md  build.sh
vst/docs/: ARCHITECTURE.md  MIDI-MAPPING.md
vst/src/: ControlState.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RenoiseLookAndFeel.h  ScratchEngine.h  TouchGate.h  TraceLog.h
vst/test/: touchgate_test.cpp  trace_replay.cpp
vst/test/traces/: s1-stutter.csv  s10-grabs.csv  s11-crawl.csv  s12-stophold.csv  s2-stops.csv  s3-drag-yanks.csv  s4-flaky-release.csv  s5-gentle-letgo.csv  s7-weak-motor.csv  s8-pullback.csv  s9-flick-letslip.csv
vst/tools/: snapshot.cpp  trace_analyze.py
